objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>CostCenter__c</fullName>
        <description>This field is used in POLK-WRF.</description>
        <inlineHelpText>European Cost Centers:
4110500 (Germany)
4210500 (Spain)
4410500 (France/Italy)
4510500 (UK)</inlineHelpText>
        <label>Cost Center</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Countofrenewalatrisk__c</fullName>
        <description>SFDC1-4160 This field will store the number of renewals at risk associated to the opportunity</description>
        <label>Count of renewal at risk</label>
        <summaryForeignKey>RenewalatRisk__c.OpportunityAtRisk__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CreatedQuarter__c</fullName>
        <description>SFDC-5520: Calculate &apos;Created Date&apos; Quarter Year as per 13month changes for FY2022 and 12month for other Financial Years.</description>
        <formula>IF( YEAR(DATEVALUE(CreatedDate)) &gt; 2021,
IF(OR(MONTH(DATEVALUE(CreatedDate)) = 1, MONTH(DATEVALUE(CreatedDate)) = 2, MONTH(DATEVALUE(CreatedDate)) = 3), TEXT(YEAR(DATEVALUE(CreatedDate)))&amp;&apos;-Q1&apos;,
IF(OR(MONTH(DATEVALUE(CreatedDate)) = 4, MONTH(DATEVALUE(CreatedDate)) = 5, MONTH(DATEVALUE(CreatedDate)) = 6), TEXT(YEAR(DATEVALUE(CreatedDate)))&amp;&apos;-Q2&apos;,
IF(OR(MONTH(DATEVALUE(CreatedDate)) = 7, MONTH(DATEVALUE(CreatedDate)) = 8, MONTH(DATEVALUE(CreatedDate)) = 9), TEXT(YEAR(DATEVALUE(CreatedDate)))&amp;&apos;-Q3&apos;,
IF(OR(MONTH(DATEVALUE(CreatedDate)) = 10, MONTH(DATEVALUE(CreatedDate)) = 11, MONTH(DATEVALUE(CreatedDate)) = 12), TEXT(YEAR(DATEVALUE(CreatedDate)))&amp;&apos;-Q4&apos;,null)))),
IF( YEAR(DATEVALUE(CreatedDate)) &lt; 2022,IF(OR(MONTH(DATEVALUE(CreatedDate)) = 12, MONTH(DATEVALUE(CreatedDate)) = 1, MONTH(DATEVALUE(CreatedDate)) = 2), TEXT(YEAR(ADDMONTHS(DATEVALUE(CreatedDate) ,1)))&amp;&apos;-Q1&apos;,
IF(OR(MONTH(DATEVALUE(CreatedDate)) = 3, MONTH(DATEVALUE(CreatedDate)) = 4, MONTH(DATEVALUE(CreatedDate)) = 5), TEXT(YEAR(ADDMONTHS(DATEVALUE(CreatedDate) ,1)))&amp;&apos;-Q2&apos;,
IF(OR(MONTH(DATEVALUE(CreatedDate)) = 6, MONTH(DATEVALUE(CreatedDate)) = 7, MONTH(DATEVALUE(CreatedDate)) = 8), TEXT(YEAR(ADDMONTHS(DATEVALUE(CreatedDate) ,1)))&amp;&apos;-Q3&apos;,
IF(OR(MONTH(DATEVALUE(CreatedDate)) = 9, MONTH(DATEVALUE(CreatedDate)) = 10, MONTH(DATEVALUE(CreatedDate)) = 11), TEXT(YEAR(ADDMONTHS(DATEVALUE(CreatedDate) ,1)))&amp;&apos;-Q4&apos;,null)))),null))</formula>
        <label>Created Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedYear__c</fullName>
        <description>SFDC-5520: Calculate &apos;Created Date&apos; Year as per 13month changes for FY2022 and 12month for other Financial Years.</description>
        <formula>IF(NOT(ISBLANK(CreatedDate)),IF(YEAR(DATEVALUE(CreatedDate) ) &lt;= 2021,TEXT(YEAR(ADDMONTHS(DATEVALUE(CreatedDate) ,1))), TEXT(YEAR(DATEVALUE(CreatedDate)))),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentYearTotalFirstYearValueSub__c</fullName>
        <inlineHelpText>Sum of first year value in USD for all active SUBSCRIPTION products (existing + new)</inlineHelpText>
        <label>Current Year total First year value-Sub</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentYearTotalFirstYearValue__c</fullName>
        <inlineHelpText>Sum of first year value in USD for all active products (existing + new)</inlineHelpText>
        <label>Current Year Total First Year Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Key Customer contacts associated with opportunity.This field is also used for WRF POLK.</description>
        <inlineHelpText>Editable until the product is selected</inlineHelpText>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerRegion__c</fullName>
        <description>SFDC1-529 This field shows the Account&apos;s Region on Opportunity</description>
        <formula>TEXT(Account.AccountCountry__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Region where Customer is based</inlineHelpText>
        <label>Customer Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataDistributionAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-2548 Global Alliance Upgrade</description>
        <inlineHelpText>Select if distribution of data is allowed.</inlineHelpText>
        <label>Data Distribution Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DataDistributionRights__c</fullName>
        <description>SFDC-2548 Global Alliance Upgrade</description>
        <inlineHelpText>If distribution is allowed, provide details and/or restrictions.</inlineHelpText>
        <label>Data Distribution Rights</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataRetrieval__c</fullName>
        <description>SFDC-2548 Global Alliance Upgrade</description>
        <inlineHelpText>Select all that indicate how the data may be accessed or retrieved.</inlineHelpText>
        <label>Data Retrieval</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>Client Credentials</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>SFTP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateLastUpdated__c</fullName>
        <description>SFDC1-286;Tracks: Stage changes, Product changes, Value changes, Comments added, Campaign added, Attachment added, Activities added,Closed Date Changes</description>
        <inlineHelpText>Tracks: Stage changes, Product changes, Value changes, Comments added, Campaign added, Attachment added, Activities added,Closed Date Changes</inlineHelpText>
        <label>Date Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateRiskFirstIdentified__c</fullName>
        <description>SFDC-4131 First time the risk was lagged against any associated product on this opportunity.</description>
        <inlineHelpText>First time the risk was lagged against any associated product on this opportunity.</inlineHelpText>
        <label>Date Risk First Identified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysSlipped__c</fullName>
        <description>SFDC1-4551. This shows for how many days this Opportunity has crossed the original closed date.</description>
        <formula>(CloseDateOriginal__c) - (CloseDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Slipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysStale__c</fullName>
        <description>SFDC1-4551. This show for how many days Opportunity is in Stale.</description>
        <formula>IF( 
OR( 
ISPICKVAL(ForecastCategoryName, &apos;Omitted&apos;), 
ISPICKVAL(ForecastCategoryName, &apos;Won&apos;)
), 0,
IF(TODAY() - CloseDate &gt; 0, TODAY() - CloseDate, 0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Stale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DecisionMakerIdentified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1 -171; If there is a primary contact identified - then auto populate this field, You can&apos;t go to a Sales Stage 4 unless this field is checked</description>
        <inlineHelpText>Please check it before stage 4</inlineHelpText>
        <label>Decision Maker Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeployedHosted__c</fullName>
        <description>SFDC-2548 Global Alliance</description>
        <inlineHelpText>Indicate whether the Partner Service is Deployed, Hosted and/or a Managed Service.</inlineHelpText>
        <label>Deployed/Hosted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deployed</fullName>
                </value>
                <value>
                    <fullName>Hosted</fullName>
                </value>
                <value>
                    <fullName>Managed Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DerivedDataAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-2548 Global Alliance Upgrade</description>
        <inlineHelpText>Select if derived data rights are granted.</inlineHelpText>
        <label>Derived Data Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DerivedDataRights__c</fullName>
        <description>SFDC-2548 Global Alliance Upgrade</description>
        <inlineHelpText>If derived data is allowed, provide details and/or restrictions.</inlineHelpText>
        <label>Derived Data Rights</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>SFDC-2548 Global Alliance</description>
        <inlineHelpText>Provide information about the deal motivation / objective.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DiscountApprovalAttachmentCount__c</fullName>
        <description>SFDC1-7114 Counts the number of opportunity attachments of type &apos;Discount Approval&apos;</description>
        <inlineHelpText>Number of &apos;Discount Approval&apos; attachments</inlineHelpText>
        <label>Discount Approval Attachment Count</label>
        <summaryFilterItems>
            <field>OpportunityAttachment__c.AttachmentType__c</field>
            <operation>equals</operation>
            <value>Discount Approval</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityAttachment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DiscountOverThreshold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4275 Checkbox to indicate if any of the products related to opportunity have crossed discount threshold</description>
        <inlineHelpText>Checked if product(s) are discounted over threshold</inlineHelpText>
        <label>Discount Over Threshold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscountThreshold__c</fullName>
        <description>SFDC1-4275 Shows red flag if any product related to opportunity is discounted over threshold</description>
        <formula>IF( 
DiscountOverThreshold__c, 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &apos;red&apos;, 30,30) + &quot; This discount is higher than the discount threshold and will trigger an alert to your supervisor once you move the Opportunity into the negotiation stage!&quot;, 
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &apos;green&apos;, 30,30) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Red flag when one or more products discounted over threshold</inlineHelpText>
        <label>Discount Threshold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscoveryCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscoveryDate__c</fullName>
        <description>Date at which the Opportunity hits the Discovery Date. Updated via Workflow.</description>
        <label>Discovery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DoesThisAutoRenewalHaveChanges__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field includes renewal details of opportunity. (JIRA story SFDC1-556)</description>
        <inlineHelpText>Specify if Auto Renewal has any changes.</inlineHelpText>
        <label>Does this Auto Renewal Have Changes?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DurationOfSubscription__c</fullName>
        <description>SFDC-3965 When an opportunity is marked as lost with Lost Reason Code as Competition, make this field mandatory</description>
        <inlineHelpText>How long has the customer subscribed to a competitive offering for?  Did they subscribe to a 1 year/2 year/3 year/5 year deal or other?</inlineHelpText>
        <label>Duration of Subscription</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DurationfromClosedDate__c</fullName>
        <description>SFDC1-6636 - The owner of an opportunity needs to be allowed to add a Campaign to a closed Opp (Won or lost) up to 90 days after it has closed.If it&apos;s been more than 90 days the error message to be displayed.</description>
        <formula>CloseDate  -  TODAY()</formula>
        <label>Duration from Closed Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EarliestTerminationPeriod__c</fullName>
        <description>SFDC-1887 needed to comply with revenue recognition standards</description>
        <inlineHelpText>If the contract has a termination clause which allows the customer out of the contract early, please select the value that applies.</inlineHelpText>
        <label>Earliest Termination Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Cancellation</fullName>
                </value>
                <value>
                    <fullName>Year 1, Q1</fullName>
                </value>
                <value>
                    <fullName>Year 1, Q2/Half Year</fullName>
                </value>
                <value>
                    <fullName>Year 1, Q3</fullName>
                </value>
                <value>
                    <fullName>Year 1, End of Year</fullName>
                </value>
                <value>
                    <fullName>Year 2, Q1</fullName>
                </value>
                <value>
                    <fullName>Year 2, Q2/Half Year</fullName>
                </value>
                <value>
                    <fullName>Year 2, Q3</fullName>
                </value>
                <value>
                    <fullName>Year 2 End of Year</fullName>
                    <label>Year 2, End of Year</label>
                </value>
                <value>
                    <fullName>Year 3, Q1</fullName>
                </value>
                <value>
                    <fullName>Year 3, Q2/Half Year</fullName>
                </value>
                <value>
                    <fullName>Year 3, Q3</fullName>
                </value>
                <value>
                    <fullName>Year 3, End of Year</fullName>
                </value>
                <value>
                    <fullName>Year 4, Q1</fullName>
                </value>
                <value>
                    <fullName>Year 4, Q2/Half Year</fullName>
                </value>
                <value>
                    <fullName>Year 4, Q3</fullName>
                </value>
                <value>
                    <fullName>Year 4, End of Year</fullName>
                </value>
                <value>
                    <fullName>Year 5, Q1</fullName>
                </value>
                <value>
                    <fullName>Year 5, Q2/Half Year</fullName>
                </value>
                <value>
                    <fullName>Year 5, Q3</fullName>
                </value>
                <value>
                    <fullName>Year 5 End of Year</fullName>
                    <label>Year 5, End of Year</label>
                </value>
                <value>
                    <fullName>Year 6, Q1</fullName>
                </value>
                <value>
                    <fullName>Year 6, Q2/Half Year</fullName>
                </value>
                <value>
                    <fullName>Year 6, Q3</fullName>
                </value>
                <value>
                    <fullName>Year 6, End of Year</fullName>
                </value>
                <value>
                    <fullName>Year 7, Q1</fullName>
                </value>
                <value>
                    <fullName>Year 7, Q2/Half Year</fullName>
                </value>
                <value>
                    <fullName>Year 7, Q3</fullName>
                </value>
                <value>
                    <fullName>Year 7 End of Year</fullName>
                    <label>Year 7, End of Year</label>
                </value>
                <value>
                    <fullName>Year 8, Q1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EstimatedValueatRiskautoupdate__c</fullName>
        <description>SFDC1-4163 This field gets its value from the associated renewal at risk</description>
        <label>zzzEstimated Value at Risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Value_of_Variable_Vol_Billing__c</fullName>
        <description>SFDC-3678 : Roll-Up of Estimated Value of Variable/Vol Billing field on Opportunity</description>
        <inlineHelpText>Rollup summary of entries from Opportunity Product field of the same name.</inlineHelpText>
        <label>Estimated Product Value (Var/Cons)</label>
        <summarizedField>OpportunityLineItem.EstimatedValueOfVariableVolBilling__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ExceptionStatus__c</fullName>
        <description>SFDC-4731: Field for exception process status</description>
        <label>Exception Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exception Requested</fullName>
                </value>
                <value>
                    <fullName>Exception Request Approved</fullName>
                </value>
                <value>
                    <fullName>Exception Request Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusivity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-2548 Global Alliance Upgrade</description>
        <inlineHelpText>Select if there is an exclusivity clause.</inlineHelpText>
        <label>Exclusivity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExistingTotalPrice__c</fullName>
        <description>SFDC1-8988: Sum of &quot;Updated List Price&quot; on Opportunity Products with status = &quot;Existing&quot;</description>
        <inlineHelpText>Sum of &quot;Updated List Price&quot; on &quot;Existing&quot; Opportunity Products</inlineHelpText>
        <label>Existing Total Price</label>
        <summarizedField>OpportunityLineItem.UnitListPrice__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Status__c</field>
            <operation>equals</operation>
            <value>Existing</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ExpectedFirstYearValue__c</fullName>
        <description>SFDC-152 calculated by Opportunity.Probability * Opportunity.FirstYearValue (roll-up field from OpportunityProduct.FirstYearValue)</description>
        <formula>FirstYearValue__c * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Rollup field for Opportunity Product&apos;s Expected First Year Value</inlineHelpText>
        <label>Expected First Year Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirstReview__c</fullName>
        <description>SFDC1-4551. This field will hold the date of First Review.</description>
        <label>First Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstYearValue__c</fullName>
        <description>SFDC1-4275 First year total price value rolled up from Opportunity Products</description>
        <inlineHelpText>First Year Contract Value</inlineHelpText>
        <label>First Year Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastCategory__c</fullName>
        <description>This formula field captures the forecast category details of opportunity.</description>
        <formula>TEXT(ForecastCategoryName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on Probability: Pipeline/Stretch/Commit</inlineHelpText>
        <label>Forecast Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormerIP__c</fullName>
        <description>SFDC1-7525 Former IP related to products on opportunity
SFDC1-8785 : updating the field type to Long Text Area</description>
        <inlineHelpText>Former IP automatically populated by system</inlineHelpText>
        <label>Former IP</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-412 Global Account Manager can only be updated by System Administrators and GAM Administrators.
SFDC1-4204 : Updated Lookup filter to allow only Salesforce Users.
SFDC1-6960:  Relabeling the GAM field to Account Manager</description>
        <inlineHelpText>Global Account Manager can only be updated by System Administrators and GAM Administrators.</inlineHelpText>
        <label>Account Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GlobalSegments__c</fullName>
        <description>SFDC-1346 Comma separated field to capure all global segments related to the opportunity product</description>
        <inlineHelpText>This is a calculated field to list all the Global segments for all the Opportunity Products where the status on the Opportunity Product is &quot;New&quot; or &quot;Existing&quot;.</inlineHelpText>
        <label>Global Segments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GovernmentContractName__c</fullName>
        <description>SFDC1-4583 This field is used to store the Government Contract Name</description>
        <label>Government Contract Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GovernmentContractNumber__c</fullName>
        <description>SFDC1-4583 This field is used to store the Government Contract Number</description>
        <label>Government Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImportantMessage__c</fullName>
        <description>SFDC1-1845 Field to display message to user when &apos;Stop Auto Renew&apos; button is clicked.</description>
        <inlineHelpText>Important Message</inlineHelpText>
        <label>Important Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalBusinessSegment__c</fullName>
        <description>SFDC-2969 Comma separated field to capure all Internal Business segments related to the opportunity product</description>
        <inlineHelpText>This is a calculated field to list all the Internal Business segments for all the Opportunity Products where the status on the Opportunity Product is &quot;New&quot; or &quot;Existing&quot;.</inlineHelpText>
        <label>Internal Business Segments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsProRated__c</fullName>
        <description>SFDC1-7082 check at the opportunity level if the underlying subscription products are pro-rated or not</description>
        <inlineHelpText>Checked if opportunity has subscription products which are pro-rated</inlineHelpText>
        <label>Is Pro-Rated?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsThisRenewalAutoClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6811 This checkbox is set to true automatically when an auto renewal opportunity is auto closed</description>
        <inlineHelpText>This checkbox is checked automatically when an auto renewal opportunity is auto closed</inlineHelpText>
        <label>Is this Renewal Auto-Closed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastReview__c</fullName>
        <description>SFDC1-4551. This field will hold the date value of Last Review.</description>
        <label>Last Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastUpdatedItem__c</fullName>
        <description>SFDC1-286;Tracks: Stage changes, Product changes, Value changes, Comments added, Campaign added, Attachment added, Activities added,Closed Date changes</description>
        <inlineHelpText>Tracks: Stage changes, Product changes, Value changes, Comments added, Campaign added, Attachment added, Activities added,Closed Date changes</inlineHelpText>
        <label>Last Updated Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadOrigin__c</fullName>
        <label>Lead Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rep Generated</fullName>
                </value>
                <value>
                    <fullName>Marketing Generated</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Analyst Generated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field stores the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>SFDC1-7046: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>Populates from the legacy system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyOpportunityID__c</fullName>
        <description>SFDC1 - 171; For data migrations - legacy opportunity or sso id
SFDC1-5742 : Adding External Id True</description>
        <externalId>true</externalId>
        <inlineHelpText>Legacy Opportunity or SSO ID</inlineHelpText>
        <label>Legacy Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-4353 Legal entity determines the products which are available for selling for an Opportunity</description>
        <inlineHelpText>Legal Entity related to this opportunity</inlineHelpText>
        <label>Legal Entity</label>
        <referenceTo>LegalEntity__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegalLead__c</fullName>
        <description>SFDC-2548 Global Alliance Upgrade</description>
        <inlineHelpText>Legal Lead</inlineHelpText>
        <label>Legal Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LossReason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>